[package]
name = "rust_fx_poc"
version = "0.1.0"
edition = "2021"
authors = ["Toby Wyllie <toby2.wyllie@live.uwe.ac.uk>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "Simple multi fx plugin t"

[workspace]
members = ["xtask"]
members = ["src/freeverb/src"]

[lib]
crate-type = ["cdylib"]
name = "rust_fx_poc"
path = "/src/freeverb/src/src/lib.rs"

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
