[package]
name = "RustAudioPlugin"
version = "0.1.0"
edition = "2021"
authors = ["Toby Wyllie"]
license = ""

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = {  path = "../../", features = ["assert_process_allocs"] }
nih_plug_egui = {  path = "../../nih_plug_egui" }
egui_extras = { version = "0.19", features = ["svg"] }
freeverb = { git = "https://github.com/irh/freeverb-rs.git" }
